WarehouseEcommerce/Content/Theme/University/app/css/Site.css
/* ... */
    .btn-warning:hover,
    .btn-warning:active,
    .btn-warning.active,
    .btn-warning.disabled,
    .btn-warning[disabled] {
        box-shadow: inset 0 1000px 0 rgba(0, 0, 0, 0.1);
    }

.btn-danger {
    color: #ffffff;
    background-color: #000;
    transition: all 0.3s linear;
    border: none;
}

    .btn-danger:hover,
    .btn-danger:active,
    .btn-danger.active,
    .btn-danger.disabled,
    .btn-danger[disabled] {
        color: #ffffff;
        background-color: #1455a6;
        border: none;
    }

.btn-success {
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    background-color: #5bb75b;
    background-image: linear-gradient(to bottom, #62c462, #51a351);
    background-repeat: repeat-x;
    border-color: #51a351 #51a351 #387038;
}

    .btn-success:hover,
    .btn-success:active,
    .btn-success.active,
    .btn-success.disabled,
    .btn-success[disabled] {
        box-shadow: inset 0 1000px 0 rgba(0, 0, 0, 0.1);
    }

.btn-info {
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    background-color: #df5c39;
    background-image: linear-gradient(to bottom, #e06342, #dc512c);
    background-repeat: repeat-x;
    border-color: #dc512c #dc512c #a2371a;
}

    .btn-info:hover,
    .btn-info:active,
    .btn-info.active,
    .btn-info.disabled,
    .btn-info[disabled] {
        background-image: none;
        background-color: #df5c39;
    }

.btn-link {
    border-color: rgba(0, 0, 0, 0);
    cursor: pointer;
    color: #23A1D1;
    border-radius: 0;
}

    .btn-link,
    .btn-link:active,
    .btn-link[disabled],
    .btn-link:focus,
    .btn-link.focus,
    .btn-link:hover {
        background-color: transparent;
        background-image: none;
        box-shadow: none;
    }

.btn-inverse {
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    background-color: #363636;
    background-image: linear-gradient(to bottom, #444444, #222222);
    background-repeat: repeat-x;
    border-color: #222222 #222222 #000000;
}

    .btn-inverse:hover,
    .btn-inverse:active,
    .btn-inverse.active,
    .btn-inverse.disabled,
    .btn-inverse[disabled] {
        background-color: #222222;
        background-image: linear-gradient(to bottom, #333333, var(--primary-color));
    }

/* //////////////////// new css after adding themes ///////////////////////// */

.nb_header {
    position: fixed;
    top: 0;
    z-index: 999;
}

    .nb_header .head-container .show span {
        display: flex;
        flex-direction: column;
    }

    .nb_header form .btn-primary:focus {
        box-shadow: none;
    }

    .nb_header form .btn-primary:active {
        border: none;
        background-color: white !important;
        color: black !important;
        box-shadow: none;
    }

.prd_lst_boxouter .imagewrap img {
    width: 235px;
    height: 235px;
}

.prdimgsec .prdimg img {
    width: 80px;
    height: 80px;
}

.uni-pages-pt {
    padding-top: 157px !important;
}

.uni-get-address-page .uni-add-new-address-h4 {
    font-weight: bold;
    margin-bottom: 12px;
}

.uni-pages-main .nb_feat_prod_sec .prd_amnt {
    white-space: nowrap;
}

.uni-pages-main .nb_feat_prod_sec .prd_name {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin-bottom: unset;
}

.uni-pages-main .nb_prd_filterwrap .list-group-item {
    display: flex;
    align-items: center;
}

    .uni-pages-main .nb_prd_filterwrap .list-group-item input {
        margin-right: 6px;
        margin-top: unset;
        width: 18px;
        height: 18px;
    }

.uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a i {
    margin-right: unset;
}

.uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a:hover {
    color: var(--secondary-color);
}

.uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a {
    cursor: pointer;
}

.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap nav ol li:before {
    content: "";
}

.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap .breadcrumb > li:after {
    top: 7px;
    right: -4px;
    width: 7px;
    height: 7px;
}

.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec select {
    -webkit-appearance: none;
    -moz-appearance: none;
    text-indent: 1px;
    text-overflow: '';
}

    .uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec select:focus {
        border-color: #495057;
        border-radius: unset;
    }

.uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec {
    font-family: "primaryfont_SemiBold";
}

.uni-pages-main .nb_prd_filterwrap {
    font-family: "primaryfont_SemiBold";
}

.modal-dialog {
    font-family: "primaryfont_SemiBold";
}

.modal-title {
    font-family: "primaryfont_SemiBold";
    font-weight: bold;
    font-size: 20px;
}

.prd_lst_boxouter .badge {
    width: 60px;
    height: 60px;
    position: absolute;
    top: -15px;
}

.prd_lst_boxouter .badge-0 {
    right: -14px;
}

.prd_lst_boxouter .badge-1 {
    right: 38px;
}

.prd_lst_boxouter .badge-2 {
    right: 90px;
}

/* --------------------------
:: Billing Address page
-------------------------- */
.about {
    padding: 50px 0;
}

.menu-about {
    padding-bottom: 30px;
}

    .menu-about li.active a:before,
    .menu-about li:hover a:before {
        position: absolute;
        top: 0;
        left: 0;
        width: 6px;
        height: 100%;
        content: "";
        z-index: 9;
        background-color: #000;
    }

.get-address-page .menu-about li {
    box-shadow: 1px 4px 4px 0px rgba(0,0,0,.1);
    margin-bottom: 15px;
}

@media(max-width:768px) {
    .get-address-page .button-submit button {
        width: 100% !important;
    }
}

.deliveryMethod {
    text-transform: none !important;
}

    .deliveryMethod label {
        display: flex;
        font-weight: 300 !important;
        margin-top: 8px;
    }
/* ... */

